// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tester/TopBanner/TopBannerInternalActionMenu WithAttributes play-test 1`] = `
<div data-test-block="true">
  <button id="actionMenuId"
          class="_button_12a0b_1 _button_withIconLeft_12a0b_8  actionMenuClassname"
          lang="en"
          data-testid="actionMenuTestId"
          data-brightness="light"
          type="button"
          aria-expanded="false"
  >
    <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_12a0b_42"
         viewbox="0 0 24 24"
         focusable="false"
         aria-hidden="true"
         role="img"
    >
      <path d="M3 6h18v2H3V6Zm0 5h18v2H3v-2Zm0 5h18v2H3v-2Z">
      </path>
    </svg>
    <span class>
      Meny
    </span>
  </button>
</div>
`;

exports[`Tester/TopBanner/TopBannerInternalActionMenu WithImperativeActions play-test 1`] = `
<div data-test-block="true">
  <button class="_button_12a0b_1 _button_withIconLeft_12a0b_8"
          data-brightness="light"
          type="button"
          aria-expanded="false"
  >
    <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_12a0b_42"
         viewbox="0 0 24 24"
         focusable="false"
         aria-hidden="true"
         role="img"
    >
      <path d="M3 6h18v2H3V6Zm0 5h18v2H3v-2Zm0 5h18v2H3v-2Z">
      </path>
    </svg>
    <span class>
      Meny
    </span>
  </button>
  <button class="_button_12a0b_1   marginLeftL"
          data-brightness="light"
          type="button"
  >
    <span class>
      Åpne
    </span>
  </button>
</div>
`;

exports[`Tester/TopBanner/TopBannerInternalActionMenu WithRef play-test 1`] = `
<div data-test-block="true">
  <button class="_button_12a0b_1 _button_withIconLeft_12a0b_8"
          data-brightness="light"
          type="button"
          id="dummyIdForwardedFromRef"
          aria-expanded="false"
  >
    <svg class="_systemIcon_6zbcy_2 _systemIcon_medium_6zbcy_9 _icon_12a0b_42"
         viewbox="0 0 24 24"
         focusable="false"
         aria-hidden="true"
         role="img"
    >
      <path d="M3 6h18v2H3V6Zm0 5h18v2H3v-2Zm0 5h18v2H3v-2Z">
      </path>
    </svg>
    <span class>
      Meny
    </span>
  </button>
</div>
`;
